Tue Jul 29 01:03:08 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* ioext.h: fix up prototypes.
	* ioext.c (scm_dup_to_fdes): renamed from scm_primitive_dup2.
	Scheme name is now dup->fdes.
	(scm_dup_to_fdes): make the second argument optional and
	fold in the functionality of scm_primitive_dup.
	(scm_primitive_dup): deleted.

Mon Jul 28 05:24:42 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* fports.h (SCM_P): prototypes for scm_setvbuf, scm_setfileno.
	* fports.c (scm_setbuf0): don't disable the setbuf if MSDOS or
	ultrix are defined.  Use setvbuf instead of setbuf.
	(scm_setvbuf): new procedure.
	(scm_init_fports): intern _IOFBF, _IOLBF, _IONBF.
	(scm_setfileno): moved from ioext.c.
	(scm_fgets): cast SCM_STREAM to (FILE *), remove unused lp variable.
	(top of file): Delete 25 lines of probably obsolete CPP hair for MSDOS.

Sun Jul 27 10:54:01 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	* fluids.c (scm_fluid_p): New function.
	* fluids.h (scm_fluid_p): New prototype.

Sat Jul 26 21:33:37 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	* print.c (scm_iprin1): Enter printed structures into the print
 	state as nested data while they are printed.
	(print_state_fluid, print_state_fluid_num): New variables.
	(scm_init_print): Initialize them.
	(scm_iprin): If print_state_fluid carries a print_state, use that
 	instead of creating a new one.
	(scm_printer_apply, apply_stub, struct apply_data): New
 	definitions to help with calling printer functions written in
 	Scheme.
  	* print.h (scm_printer_apply): New prototype.

	* struct.c (scm_print_struct): Use scm_printer_apply to call the
 	user defined struct printer.
	
	* dynwind.c (scm_dowinds): Handle fluids on the wind list.
	* fluids.h (scm_internal_with_fluids, scm_with_fluids,
 	scm_swap_fluids, scm_swap_fluids_reverse): New prototypes.
	* fluids.c (scm_internal_with_fluids, scm_with_fluids,
 	scm_swap_fluids, scm_swap_fluids_reverse): New functions.
