@@ -1,3 +1,14 @@
+Wed Aug 13 15:38:44 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
+
+*	* gh_io.c (gh_write): New function.
+
+*	* gh_eval.c (catch_with_saved_stack): Removed.  Replaced by:
+	throw.c (scm_internal_stack_catch): New sibling to the other catch
+	functions.  Code moved from gh_eval.c.
+	throw.h: Added header.
+	gh_eval.c (gh_eval_str_with_stack_saving_handler): Renamed call to
+	scm_internal_stack_catch.
+
 Tue Jul 29 01:03:08 1997  Gary Houston  <ghouston@actrix.gen.nz>
 
 	* ioext.h: fix up prototypes.
